--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
 <section class="home" id="home">
 
     <div class="content">
-        <h3>gingerbreadsketchy</h3>
+        <h3>gingersketchy</h3>
         <p>i am a front-end developer</p>
         <a href="https://api.whatsapp.com/send?phone=254792893310&text=Hi%20there%20Ginger" class="btn">download CV</a>
     </div>
 
     <div class="share">
         <a href="https://www.facebook.com/chiki.taka.92" class="fab fa-facebook-f"></a>
-        <a href="https://twitter.com/BongoStrange" class="fab fa-twitter"></a>
+        <a href="https://twitter.com/SketchyBread" class="fab fa-twitter"></a>
         <a href="www.instagram.com/gingerbreadsketchy" class="fab fa-instagram"></a>
         <a href="https://wa.me/+254792893310" class="fab fa-whatsapp"></a>
         <a href="https://t.me/@gingerbreadsketchy" class="fab fa-telegram"></a>
